[tool.poetry]
name = "biorxivist"
version = "0.1.0"
description = "Tools to access prepublications from BioRxiv and integrate LLM tools."
authors = ["Ted Johnson"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
langchain = "^0.0.330"

[tool.poetry.optional-dependencies]
pre-commit = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
